# footy

./: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_variant_version.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  cart.py  categories.py  events.py  health.py  orders.py  products.py  statistics.py  users.py  wishlist.py
backend/app/api/v1/admin/: __init__.py  categories.py  orders.py  products.py
backend/app/core/: config.py  exception_handlers.py  exceptions.py  logging.py  rate_limit.py  redis.py  request_limits.py  security_headers.py  session.py
backend/app/db/: base.py  seed.py  transaction.py
backend/app/domain/: __init__.py  order.py
backend/app/models/: __init__.py  base.py  cart.py  category.py  event.py  order.py  product.py  user.py  wishlist.py
backend/app/schemas/: __init__.py  base.py  cart.py  category.py  event.py  order.py  product.py  user.py  wishlist.py
backend/app/services/: __init__.py  auth_service.py  cart_service.py  event_service.py  order_service.py  product_service.py  wishlist_service.py
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/hooks/: index.ts  useAnalytics.ts  useCircularText.ts  useCountingAnimation.ts  useFormGlitch.ts  useGlitchEffect.ts  useStrokeDraw.ts
frontend/src/lib/: analytics.ts  api.ts  money.ts  (+1 more)
(+87 files in other folders)
